# Fullstack-United-Consulting-Test-task

./: README.md
assets/: video.mov
backend/: main.py  pyproject.toml  schema.py
frontend/: README.md  package-lock.json  package.json  vite.config.mts
frontend/src/: vue-shim.d.ts
frontend/src/api/: chartsAPI.ts
frontend/src/main/: MainRunner.ts  index.ts
frontend/src/main/utils/: BackendLifeCycle.ts
frontend/src/renderer/: main.ts
frontend/src/renderer/components/Chart/: ChartComponent.vue  Echart.vue  services.ts
frontend/src/renderer/components/layout/: DefaultLayout.vue  HeaderLayout.vue  NavigationLayout.vue
frontend/src/renderer/plugins/: vuetify.ts
frontend/src/renderer/screens/: MainScreen.vue
frontend/src/renderer/store/: apexChartStore.ts  charts.ts  interface.charts.d.ts
