[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Oleg Korolev <ok@hustn.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
fastai = {extras = ["unicorn"], version = "^2.7.17"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
